--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <style>
         body{
             /* background-color: aquamarine; */
-            background-image: url(/images/main.jpg);
+            background-image: url(images/main.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             /* height: 570px; */
