--- a/main.html
+++ b/main.html
@@ -90,8 +90,7 @@
 <body>
 
     <center>
-    <input id="submit" type='button' onclick='tableFromJson()' 
-    	value='Click to view list' />
+    <input id="submit" type='button' onclick='tableFromJson()'	value='Click to view list' />
         <input id="submit" type='button' onclick='logout()'
     	value='Logout' />
         
